--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
     "input-otp": "^1.2.4",
+    "jotai": "^2.9.3",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
