--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.1",
     "react-use": "^17.5.1",
+    "react-verification-input": "^4.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
